Implement changes from TTL review
