# server/seeders/20180910104809-generateUser.js
@@ -1,13 +1,0 @@
-
-module.exports = {
-  up: queryInterface => queryInterface.bulkInsert('Users', [{
-    username: 'username',
-    email: 'username@gmail.com',
-    password: 'bouhsiudgsd',
-    isVerified: true,
-    createdAt: '2018-09-09',
-    updatedAt: '2018-09-09',
-  }]),
-
-  down: queryInterface => queryInterface.bulkDelete('Users', null, {})
-};
